--- a/src/website/custom-chatbot-style.css
+++ b/src/website/custom-chatbot-style.css
@@ -4,88 +4,111 @@
 .toolbar.theme--dark {
     background-color: #2b2b2b !important;
 }
-
-.toolbar__title {
-  font-family:"Sans-serif" !important;
-  font-size: 1.875em !important;
-  color: #ffffff !important;
-}
-
-.message-list-container {
-  background-color: #dcdbdc !important
-}
-
-.message-bot .message-bubble {
-    background-color: #eeedeb !important;
-}
-
-.message-human .message-bubble {
-    background-color: #afcffa !important;
-}
-
-.message-bubble p {
-    margin-bottom: 8px;
-}
-
-.message-bubble p:last-child {
-    margin-bottom: 0px;
-}
-
-.message-bubble .message-text {
-    padding-left:  0;
-    padding-right: 0;
-    line-height: 1.6;
-    font-size: 1rem;
-}
-
-.message-bubble {
-    border-radius: 10px !important;
-    padding: 2px 18px !important;
-}
-
-.message-text {
-  color: #000000;
-  width: 100%;
-}
-
-.headline {
-    font-size: 1.2rem !important;
-    line-height: 1.4 !important;
-}
-
-.card__title {
-    padding: 10px 16px !important;
-}
-
-.card__text {
-    padding: 8px 16px 16px !important;
-    line-height: 1.4;
-}
-
-.card__title.card__title--primary {
-    background-color: #eeedeb !important;
-}
-
-
-.input-group--text-field input,
-.input-group--text-field textarea,
-.input-group--text-field label {
-    font-size: 14px !important;
-}
-
-.card__actions .btn {
-  margin: 4px 4px !important;
-  font-size: 1em !important;
-  min-width: 44px !important;
-  background-color: #afcffa !important;
-}
-
 */
-
-button.min-button {
-    border-radius: 60px;
-}
-
-.message-button {
-    display: none;
-}
+.toolbar__title {
+    /*font-family:"Sans-serif" !important;*/
+    font-size: 1.3em !important;
+    color: #ffffff !important;
+  }
+  
+  /*.message-list-container {
+    background-color: #dcdbdc !important
+  }*/
+  
+  .message-bot .message-bubble {
+      background-color: #F0F1F4 !important;
+      /*background-color: #eeedeb !important;*/
+  }
+  
+  .message-human .message-bubble {
+      background-color: #f4fafa !important;
+  }
+  
+  /*.message-bubble p {
+      margin-bottom: 20px;
+  }
+  
+  .message-bubble p:last-child {
+      margin-bottom: 0px;
+  }
+  
+  .message-bubble .message-text {
+      padding-left:  0;
+      padding-right: 0;
+      line-height: 1.6;
+      font-size: 1rem;
+  }
+  
+  .message-bubble {
+      border-radius: 10px !important;
+      padding: 2px 18px !important;
+  }*/
+  
+  .message-text {
+    color: #07142C ;
+    width: 100%;
+  }
+  
+  /*.headline {
+      font-size: 1.2rem !important;
+      line-height: 1.4 !important;
+  }
+  
+  .card__title {
+      padding: 10px 16px !important;
+  }
+  
+  .card__text {
+      padding: 8px 16px 16px !important;
+      line-height: 1.4;
+  }
+  
+  .card__title.card__title--primary {
+      background-color: #eeedeb !important;
+  }
+  
+  
+  .input-group--text-field input,
+  .input-group--text-field textarea,
+  .input-group--text-field label {
+      font-size: 14px !important;
+  }*/
+  
+  .card__actions .btn {
+    margin: 4px 4px !important;
+    font-size: 1em !important;
+    min-width: 44px !important;
+  }
+  
+  .btn.btn--outline {
+      background-color: #fff !important;
+      border: .125rem solid #086f72;
+      color: #086f72 !important;
+    }
+  
+  
+  .btn.btn--disabled {
+      box-shadow: none !important;
+      pointer-events: none;
+      background-color: #f0f1f4;
+      color: #565c71;
+      border: #f0f1f4;
+  }
+  
+  .btn {
+      text-transform: none;
+  }
+  
+  a:-webkit-any-link {
+      color: -webkit-link;
+      cursor: pointer;
+      text-decoration: underline;
+  }
+  
+  button.min-button {
+      border-radius: 60px;
+  }
+  
+  .message-button {
+      display: none;
+  }
