--- a/src/website/custom-chatbot-style.css
+++ b/src/website/custom-chatbot-style.css
@@ -7,7 +7,7 @@
 */
 .toolbar__title {
     /*font-family:"Sans-serif" !important;*/
-    font-size: 1.3em !important;
+    font-size: 1.3em;
     color: #ffffff !important;
   }
   
@@ -95,20 +95,52 @@
       border: #f0f1f4;
   }
   
-  .btn {
-      text-transform: none;
-  }
-  
-  a:-webkit-any-link {
-      color: -webkit-link;
-      cursor: pointer;
-      text-decoration: underline;
-  }
-  
   button.min-button {
       border-radius: 60px;
+      text-transform: none;
   }
   
   .message-button {
       display: none;
+  }
+  
+  .toolbar.toolbar--dense.white {
+      margin-left: 10px;
+      background-color: #fff!important;
+      border-color: #fff!important;
+      margin-right: 10px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+  }
+  
+  a.help-link {
+      text-align: center;
+      display: flex;
+      cursor: pointer;
+      margin-bottom: 10px;
+      justify-content: center;
+  }
+  
+  .message-list-container.toolbar-height-md {
+      top: 48px;
+      height: calc(100% - 140px);
+  
+  }
+  /*.fa, .fab, .fal, .far, .fas {
+      -moz-osx-font-smoothing: grayscale;
+      -webkit-font-smoothing: antialiased;
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      text-rendering: auto;
+      line-height: 1;
+      font-size: 20px;
+  }*/
+  
+  .fas.fa-paper-plane {
+      font-size: 20px;
+  }
+  
+  .fas.fa-comments {
+      font-size: 20px;
   }
